--- a/view/css/ihm_score.less
+++ b/view/css/ihm_score.less
@@ -5,6 +5,12 @@ style.css
 Par NSFW
 */
 
+
+#ajout_equipe{
+  width: 70%;
+  margin:0 auto;
+}
+
 div {
   margin-top: 20px;
 }
@@ -13,3 +19,12 @@ table {
   margin-top: 80px;
 }
 
+#tour{
+  border-radius: 100%;
+  height: 100px;
+  width: 100px;
+  background: red;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+}
